--- a/Lab 3 - Invaders/Properties/Resources.resx
+++ b/Lab 3 - Invaders/Properties/Resources.resx
@@ -193,4 +193,10 @@
   <data name="star4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\star4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="GameOver" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GameOver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="GameUI" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GameUI.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
