--- a/Lab 3 - Invaders/Properties/Resources.resx
+++ b/Lab 3 - Invaders/Properties/Resources.resx
@@ -196,6 +196,12 @@
   <data name="GameOver" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GameOver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="gameOver_enterScore" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gameOver_score.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="gameOver_buttons" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gameOver_buttons.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="GameUI" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GameUI.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
