--- a/Lab 3 - Invaders/Properties/Resources.resx
+++ b/Lab 3 - Invaders/Properties/Resources.resx
@@ -205,4 +205,7 @@
   <data name="GameUI" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GameUI.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pauseInterface" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pauseInterface.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
